--- a/.gitignore
+++ b/.gitignore
@@ -239,3 +239,25 @@ dmypy.json
 .idea
 
 # End of https://www.gitignore.io/api/osx,linux,python,pycharm
+# Patterns to ignore when building packages.
+# This supports shell glob matching, relative path matching, and
+# negation (prefixed with !). Only one pattern per line.
+.DS_Store
+# Common VCS dirs
+.git/
+.gitignore
+.bzr/
+.bzrignore
+.hg/
+.hgignore
+.svn/
+# Common backup files
+*.swp
+*.bak
+*.tmp
+*~
+# Various IDEs
+.project
+.idea/
+*.tmproj
+.vscode/
