--- a/jenkins-backup-restore-cli/Chart.yaml
+++ b/jenkins-backup-restore-cli/Chart.yaml
@@ -1,9 +1,9 @@
 apiVersion: v2
-name: helm-chart
-description: A Helm chart for jenkins-backup-restore-cli
+name: jenkins-backup-restore-cli
+description: A Helm chart for subscripts-backup-restore-cli
 type: application
 version: 0.0.1
-appVersion: 1.0.5
+appVersion: 1.1.0
 maintainers:
   - name: venkatalolla
     email: suryasaicharan93@gmail.com
@@ -14,3 +14,4 @@ keywords:
   - jenkins
   - backup
   - restore
+  - jenkins-backup-restore-cli
