--- a/jenkins-backup-restore-cli/templates/deployment.yaml
+++ b/jenkins-backup-restore-cli/templates/deployment.yaml
@@ -3,20 +3,20 @@ kind: Deployment
 metadata:
   name: {{ include "helm-chart.fullname" . }}
   labels:
-    {{- include "helm-chart.labels" . | nindent 4 }}
+  {{- include "helm-chart.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      {{- include "helm-chart.selectorLabels" . | nindent 6 }}
+  {{- include "helm-chart.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
-        {{- include "helm-chart.selectorLabels" . | nindent 8 }}
+    {{- include "helm-chart.selectorLabels" . | nindent 8 }}
     spec:
-    {{- if .Values.imagePullSecrets }}
+      {{- if .Values.imagePullSecrets }}
       imagePullSecrets: {{ .Values.image.imagePullSecret }}
-    {{- end }}
+      {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.imageRepository }}/{{ .Values.image.imageName }}:{{ .Values.image.imageTag }}"
@@ -25,6 +25,10 @@ spec:
             - name: http
               containerPort: {{ .Values.service.port }}
               protocol: TCP
+          {{- if .Values.envVars }}
+          env:
+            {{-  with .Values.envVars}}{{ . | toYaml | trim | nindent 12 }}{{ end }}
+          {{- end }}
           volumeMounts:
             - mountPath: {{ required "You must provide a volume mount via .Values.volumeMountPath!" .Values.volumes.mountPath }}
               name: {{ .Values.volumes.volumeName }}
