--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,5 +7,4 @@ jobs:
       - image: python:latest
     steps:
       - checkout
-      - run: echo "hello world"
-      - run: ls
+      - run: python3 jenkins_backup_restore_cli/jenkins_backup_restore_cli.py --help
