--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,4 +7,5 @@ jobs:
       - image: python:latest
     steps:
       - checkout
+      - run: python setup.py install --user
       - run: python3 jenkins_backup_restore_cli/jenkins_backup_restore_cli.py --help
