--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,5 +7,8 @@ jobs:
       - image: python:latest
     steps:
       - checkout
-      - run: python setup.py install --user
-      - run: jenkins-backup-restore-cli --help
+      - run:
+          name: python-test
+          command:
+            python setup.py install --user && \
+            jenkins-backup-restore-cli --help
