--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,8 @@ jobs:
       - checkout
       - run:
           name: python-test
-          command:
-            python setup.py install --user && \
+          command: |
+            echo 'export PATH=/root/.local/bin:$PATH' >> $BASH_ENV
+            source $BASH_ENV
+            python setup.py install --user
             jenkins-backup-restore-cli --help
