--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,43 @@
 version: 2.1
 
+executors:
+  python-executor:
+    docker:
+      - image: python:latest
+    working_directory: /tmp
+
 jobs:
   build:
-    build:
-    docker: 
-      - image: python:latest
+    executor: python-executor
     steps:
       - checkout
       - run:
-          name: python-test
+          name: python-package-build
+          command: python sdist bdist_wheel
+      - persist_to_workspace:
+          root: jenkins-workspace
+          paths:
+            - dist
+
+  tests:
+    executor: python-executor
+    steps:
+      - attach_workspace:
+          at: /tmp/jenkins-workspace
+      - run:
+          name: python-package-test
           command: |
-            echo 'export PATH=/root/.local/bin:$PATH' >> $BASH_ENV
-            source $BASH_ENV
-            python setup.py install --user
-            jenkins-backup-restore-cli --help
+            source tests/functional_test.sh
+            prereq_install
+            backup_test
+            restore_test
+
+workflows:
+  version: 2
+
+  jenkins-backup-restore-cli:
+    jobs:
+      - build
+      - tests:
+          requires:
+            - build
