--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,8 +26,8 @@ jobs:
   tests:
     executor: python-executor
     steps:
-      - attach_workspace:
-          at: jenkins-ci
+            #      - attach_workspace:
+            #at: jenkins-ci
       - run:
           name: python-package-test
           command: |
