--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,8 +27,8 @@ jobs:
             chmod 700 tests/functional_tests.sh
             source tests/functional_tests.sh
             prereq_install
-            backup_test
-            restore_test
+            backup_local_test
+            restore_local_test
 
 workflows:
   version: 2
